Home/argocd-sample/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.class: traefik-internal
spec:
  tls:
    - hosts:
        - app.internal
      secretName: app.internal-cert
  rules:
    - host: app.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
